correct style for announcement on mobile and tablet

--- a/_sass/strimzi.scss
+++ b/_sass/strimzi.scss
@@ -524,6 +524,16 @@ blockquote::after {
   margin: 0 -13rem;
   padding: 2rem 13rem;
 
+  @media screen and (max-width: 1170px) {
+    margin: 0 -6rem;
+    padding: 2rem 6rem;
+  }
+
+  @media screen and (max-width: 768px) {
+    margin: 0 -2rem;
+    padding: 2rem;
+  }
+
   p {
     font-size: 1.5rem;
     line-height: 1.75rem;
